[package]
name = "sorpho"
version = "0.1.0"
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
edition = "2021"
license = "MIT"
description = "a photo management software"
repository = "https://github.com/sorcerersr/sorpho"
readme = "README.md"

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # rendering backend
    "persistence",   # Enable restoring app state when restarting the app.
] }

# for app persistence:
serde = { version = "1", features = ["derive"] }

tracing-subscriber = "0.3"
