[package]
name = "sorpho"
version = "0.1.0"
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
edition = "2021"
license = "MIT"
description = "a photo management software"
repository = "https://github.com/sorcerersr/sorpho"
readme = "README.md"

[dependencies]
adw = { version = "0.2.1", package = "libadwaita" }
gtk = { version = "0.5.5", package = "gtk4", features = ["v4_8"] }

