[package]
name = "sorpho"
version = "0.1.0"
authors = ["Stefan Rabmund <sorcerersr@mailbox.org>"]
edition = "2021"
license = "MIT"
description = "a photo management software"
repository = "https://github.com/sorcerersr/sorpho"
readme = "README.md"

[dependencies]
env_logger = "0.10"
log = "0.4"
iced = "0.8.0"
xdg = "2.4.1"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"

